--- a/website.yaml
+++ b/website.yaml
@@ -1,7 +1,7 @@
 title: "MIDL 2020"
 date: ""
 theme: "midl-website-theme"
-primary-color: "#A51E1B"
+primary-color: "#5170B1"
 content: "placeholder"
 
 twitter: "midl_conference"
