--- a/website.yaml
+++ b/website.yaml
@@ -8,8 +8,10 @@ twitter: "midl_conference"
 youtube: "channel/UCd87UPUTt-oqTeGi8fQw-_w"
 github: "MIDL-Conference/midl-website-2020"
 
+show_twitter_button: no
 show_twitter_feed: no
-show_platform_icons: no
+num_tweets_in_feed: 1
+show_platform_icons: yes
 
 nav:
   - title: "Home"
