Switching from placeholder to real pages

--- a/website.yaml
+++ b/website.yaml
@@ -1,9 +1,10 @@
 title: "MIDL 2020"
-date: ""
+date: "6 - 8 July 2020"
 theme: "midl-website-theme"
 primary-color: "#5170B1"
-content: "placeholder"
+content: "pages"
 
+email: "2020@midl.io"
 twitter: "midl_conference"
 youtube: "channel/UCd87UPUTt-oqTeGi8fQw-_w"
 github: "MIDL-Conference/midl-website-2020"
@@ -17,6 +18,9 @@ nav:
   - title: "Home"
     path: "/"
     icon: "home"
+  - title: "Aims and Scope"
+    path: "https://www.midl.io/aims-and-scope.html"
+    icon: "lightbulb"
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
