Commented the Sponsorship page

--- a/website.yaml
+++ b/website.yaml
@@ -24,9 +24,9 @@ nav:
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
-  - title: "Sponsorship"
-    path: "/sponsorship-packages.html"
-    icon: "star"
+  # - title: "Sponsorship"
+  #   path: "/sponsorship-packages.html"
+  #   icon: "star"
   - title: "Organization"
     path: "/organization.html"
     icon: "users"
