--- a/website.yaml
+++ b/website.yaml
@@ -24,6 +24,9 @@ nav:
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
+  - title: "Venue"
+    path: "/venue.html"
+    icon: "map-marker-alt"
   # - title: "Sponsorship"
   #   path: "/sponsorship-packages.html"
   #   icon: "star"
