Move ates into dedicated pages, add iCalendar

--- a/website.yaml
+++ b/website.yaml
@@ -26,6 +26,9 @@ nav:
   - title: "Aims and Scope"
     path: "https://www.midl.io/aims-and-scope.html"
     icon: "lightbulb"
+  - title: "Dates & schedule"
+    path: "/dates.html"
+    icon: "calendar"
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
