--- a/website.yaml
+++ b/website.yaml
@@ -24,7 +24,7 @@ nav:
     path: "/"
     icon: "home"
   - title: "Aims and Scope"
-    path: "https://www.midl.io/aims-and-scope.html"
+    path: "/aims.html"
     icon: "lightbulb"
   - title: "Dates & schedule"
     path: "/dates.html"
