--- a/website.yaml
+++ b/website.yaml
@@ -38,6 +38,9 @@ nav:
   # - title: "Sponsorship"
   #   path: "/sponsorship-packages.html"
   #   icon: "star"
+  - title: "Code of conduct"
+    path: "/code-of-conduct.html"
+    icon: "thumbs-up"
   - title: "Organization"
     path: "/organization.html"
     icon: "users"
