Add page for challenges

--- a/website.yaml
+++ b/website.yaml
@@ -35,6 +35,9 @@ nav:
   - title: "Venue"
     path: "/venue.html"
     icon: "map-marker-alt"
+  - title: "Challenges"
+    path: "/challenges.html"
+    icon: "trophy"
   # - title: "Sponsorship"
   #   path: "/sponsorship-packages.html"
   #   icon: "star"
