Add visa and travel page

--- a/website.yaml
+++ b/website.yaml
@@ -32,12 +32,15 @@ nav:
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
-  - title: "Venue"
-    path: "/venue.html"
-    icon: "map-marker-alt"
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
+  - title: "Venue"
+    path: "/venue.html"
+    icon: "map-marker-alt"
+  - title: "Visa & travel"
+    path: "/visa.html"
+    icon: "plane"
   # - title: "Sponsorship"
   #   path: "/sponsorship-packages.html"
   #   icon: "star"
