--- a/website.yaml
+++ b/website.yaml
@@ -29,6 +29,9 @@ nav:
   - title: "Dates & schedule"
     path: "/dates.html"
     icon: "calendar"
+  - title: "Keynotes"
+    path: "/keynotes.html"
+    icon: "microphone"
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
