--- a/website.yaml
+++ b/website.yaml
@@ -29,12 +29,15 @@ nav:
   - title: "Dates & schedule"
     path: "/dates.html"
     icon: "calendar"
-  - title: "Keynotes"
-    path: "/keynotes.html"
-    icon: "microphone"
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
+  - title: "Author instructions"
+    path: "/author-instructions.html"
+    icon: "pen-nib"
+  - title: "Keynotes"
+    path: "/keynotes.html"
+    icon: "microphone"
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
