Mask author instructions

--- a/website.yaml
+++ b/website.yaml
@@ -32,9 +32,9 @@ nav:
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
-  - title: "Author instructions"
-    path: "/author-instructions.html"
-    icon: "pen-nib"
+  # - title: "Author instructions"
+  #   path: "/author-instructions.html"
+  #   icon: "pen-nib"
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
