Unmask author instruction, show only latex template

--- a/website.yaml
+++ b/website.yaml
@@ -32,9 +32,9 @@ nav:
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
-  # - title: "Author instructions"
-  #   path: "/author-instructions.html"
-  #   icon: "pen-nib"
+  - title: "Author instructions"
+    path: "/author-instructions.html"
+    icon: "pen-nib"
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
@@ -47,14 +47,14 @@ nav:
   - title: "Visa & travel"
     path: "/visa.html"
     icon: "plane"
-  # - title: "Sponsorship"
-  #   path: "/sponsorship-packages.html"
-  #   icon: "star"
   - title: "Code of conduct"
     path: "/code-of-conduct.html"
     icon: "thumbs-up"
   - title: "Organization"
     path: "/organization.html"
     icon: "users"
+  - title: "Sponsorship"
+    path: "/sponsorship-packages.html"
+    icon: "star"
 
 cdn: "https://static.midl.io"
