Add currently confirmed sponsors
Created a dedicated page for them, and changed the logo of the
sponsorship page.

--- a/website.yaml
+++ b/website.yaml
@@ -53,8 +53,11 @@ nav:
   - title: "Organization"
     path: "/organization.html"
     icon: "users"
+  - title: "Sponsors"
+    path: "/sponsors.html"
+    icon: "star"
   - title: "Sponsorship"
     path: "/sponsorship-packages.html"
-    icon: "star"
+    icon: "donate"
 
 cdn: "https://static.midl.io"
