Add reviewer instructions

--- a/website.yaml
+++ b/website.yaml
@@ -37,6 +37,9 @@ nav:
   - title: "Author instructions"
     path: "/author-instructions.html"
     icon: "pen-nib"
+  - title: "Reviewer instructions"
+    path: "/reviewer-instructions.html"
+    icon: "search"
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
