--- a/website.yaml
+++ b/website.yaml
@@ -25,6 +25,9 @@ nav:
   - title: "Home"
     path: "/"
     icon: "home"
+  - title: "Covid-19 FAQ"
+    path: "/covid-19.html"
+    icon: "comment-medical"
   - title: "Aims and Scope"
     path: "/aims.html"
     icon: "lightbulb"
