--- a/website.yaml
+++ b/website.yaml
@@ -43,9 +43,9 @@ nav:
   - title: "Reviewer instructions"
     path: "/reviewer-instructions.html"
     icon: "search"
-  - title: "Registration"
-    path: "/registration.html"
-    icon: "ticket-alt"
+  # - title: "Registration"
+  #   path: "/registration.html"
+  #   icon: "ticket-alt"
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
