Hides website and registratino page

--- a/website.yaml
+++ b/website.yaml
@@ -55,9 +55,9 @@ nav:
   - title: "Venue"
     path: "/venue.html"
     icon: "map-marker-alt"
-  - title: "Visa & travel"
-    path: "/visa.html"
-    icon: "plane"
+  # - title: "Visa & travel"
+  #   path: "/visa.html"
+  #   icon: "plane"
   - title: "Code of conduct"
     path: "/code-of-conduct.html"
     icon: "thumbs-up"
