Removes venue and other events pages
Not needed as we are fully online

--- a/website.yaml
+++ b/website.yaml
@@ -34,15 +34,9 @@ nav:
   - title: "Dates & schedule"
     path: "/dates.html"
     icon: "calendar"
-  - title: "Call for papers"
-    path: "/call-for-papers.html"
-    icon: "bullhorn"
   - title: "Author instructions"
     path: "/author-instructions.html"
     icon: "pen-nib"
-  - title: "Reviewer instructions"
-    path: "/reviewer-instructions.html"
-    icon: "search"
   # - title: "Registration"
   #   path: "/registration.html"
   #   icon: "ticket-alt"
@@ -52,9 +46,15 @@ nav:
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
-  - title: "Venue"
-    path: "/venue.html"
-    icon: "map-marker-alt"
+  - title: "Call for papers"
+    path: "/call-for-papers.html"
+    icon: "bullhorn"
+  - title: "Reviewer instructions"
+    path: "/reviewer-instructions.html"
+    icon: "search"
+  # - title: "Venue"
+  #   path: "/venue.html"
+  #   icon: "map-marker-alt"
   # - title: "Visa & travel"
   #   path: "/visa.html"
   #   icon: "plane"
@@ -70,8 +70,8 @@ nav:
   - title: "Sponsorship"
     path: "/sponsorship-packages.html"
     icon: "donate"
-  - title: "Other events"
-    path: "/other-events.html"
-    icon: "city"
+  # - title: "Other events"
+  #   path: "/other-events.html"
+  #   icon: "city"
 
 cdn: "https://static.midl.io"
