--- a/website.yaml
+++ b/website.yaml
@@ -43,6 +43,12 @@ nav:
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
+  - title: "Full papers"
+    path: "/program/full-papers.html"
+    icon: "comment"
+  - title: "Short papers"
+    path: "/program/short-papers.html"
+    icon: "list-alt"
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
