Add recording help in the list of tabs

--- a/website.yaml
+++ b/website.yaml
@@ -37,6 +37,9 @@ nav:
   - title: "Author instructions"
     path: "/author-instructions.html"
     icon: "pen-nib"
+  - title: "Recording help"
+    path: "/video-help.html"
+    icon: "video"
   # - title: "Registration"
   #   path: "/registration.html"
   #   icon: "ticket-alt"
