Toggle back registration page

--- a/website.yaml
+++ b/website.yaml
@@ -40,9 +40,9 @@ nav:
   - title: "Recording help"
     path: "/video-help.html"
     icon: "video"
-  # - title: "Registration"
-  #   path: "/registration.html"
-  #   icon: "ticket-alt"
+  - title: "Registration"
+    path: "/registration.html"
+    icon: "ticket-alt"
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
