Add scientific program

--- a/website.yaml
+++ b/website.yaml
@@ -25,24 +25,12 @@ nav:
   - title: "Home"
     path: "/"
     icon: "home"
-  - title: "Covid-19 FAQ"
-    path: "/covid-19.html"
-    icon: "comment-medical"
-  - title: "Aims and Scope"
-    path: "/aims.html"
-    icon: "lightbulb"
   - title: "Dates & schedule"
     path: "/dates.html"
     icon: "calendar"
-  - title: "Author instructions"
-    path: "/author-instructions.html"
-    icon: "pen-nib"
-  - title: "Recording help"
-    path: "/video-help.html"
-    icon: "video"
-  - title: "Registration"
-    path: "/registration.html"
-    icon: "ticket-alt"
+  - title: "Scientific program"
+    path: "/scientific-program.html"
+    icon: "microscope"
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
@@ -55,6 +43,21 @@ nav:
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
+  - title: "Covid-19 FAQ"
+    path: "/covid-19.html"
+    icon: "comment-medical"
+  - title: "Aims and Scope"
+    path: "/aims.html"
+    icon: "lightbulb"
+  - title: "Author instructions"
+    path: "/author-instructions.html"
+    icon: "pen-nib"
+  - title: "Recording help"
+    path: "/video-help.html"
+    icon: "video"
+  - title: "Registration"
+    path: "/registration.html"
+    icon: "ticket-alt"
   - title: "Call for papers"
     path: "/call-for-papers.html"
     icon: "bullhorn"
