Point GitHub link to organization not to website repository

--- a/website.yaml
+++ b/website.yaml
@@ -9,7 +9,7 @@ email: "2020@midl.io"
 twitter: "midl_conference"
 openreview: "MIDL.io/2020/Conference"
 youtube: "channel/UCd87UPUTt-oqTeGi8fQw-_w"
-github: "MIDL-Conference/midl-website-2020"
+github: "MIDL-Conference"
 
 
 show_twitter_button: no
