Add challenges to program

--- a/pages/scientific-program.template
+++ b/pages/scientific-program.template
@@ -4,7 +4,9 @@ title: "MIDL 2020 Tentative Program - Long"
 
 {% from "_macros.html" import paper %}
 
-# MIDL 2020 Tentative Program - Long
+# MIDL 2020 Program - Long
+
+The conference main schedule will run in Montreal time (ET), [UTC-4](https://www.timeanddate.com/time/map/).
 
 
 ## Monday July 6 - 8:00-15:00
@@ -290,3 +292,15 @@ title: "MIDL 2020 Tentative Program - Long"
 ---
 
 ### WED 15:00-15:30 ET - Closings
+
+
+---
+
+## Thursday July 9 - 9:00-17:00 UTC-4 - [Challenges](/challenges.html)
+
+* 14:00-17:00 UTC-4 - [MC-MRRec](https://sites.google.com/view/calgary-campinas-dataset/home/mr-reconstruction-challenge):
+ Multi-channel MR Image Reconstruction Challenge
+* 9:00-13:00 UTC-4 - [SARAS](https://saras-esad.grand-challenge.org):
+ SARAS endoscopic vision challenge for surgeon action detection
+* THU 9:00-13:00 UTC-4 - [object-CXR](https://jfhealthcare.github.io/object-CXR/):
+ Automatic detection of foreign objects on chest X-rays
