Updated program: session chairs and change some sessions names

--- a/pages/scientific-program.template
+++ b/pages/scientific-program.template
@@ -18,6 +18,8 @@ A short program overview in the [program at a glance](/dates.html), and you can 
 
 ### MON 8:30-9:30 UTC-4 - Oral Session #1 - Uncertainty
 
+Session Chairs: Bjoern Menze, Qi Dou
+
 [% .papers %]
 {{O102}}
 {{O146}}
@@ -69,6 +71,8 @@ A short program overview in the [program at a glance](/dates.html), and you can 
 
 ### MON 12:30-13:30 UTC-4 - Oral Session #2 - Limited Data
 
+Session Chairs: J. Eugenio Iglesias, Caroline Petitjean
+
 [% .papers %]
 {{O001}}
 {{O043}}
@@ -109,6 +113,8 @@ A short program overview in the [program at a glance](/dates.html), and you can 
 
 
 ### TUE 8:30-9:30 UTC-4 - Oral Session #3 - Networks for Histology
+
+Session Chairs: Kevin Zhou, Clarisa Sánchez
 
 [% .papers %]
 {{O095}}
@@ -165,6 +171,8 @@ A short program overview in the [program at a glance](/dates.html), and you can 
 
 ### TUE 13:30-14:30 UTC-4 - Oral #4 - Imaging
 
+Session Chairs: Dana Cobzas, Samuel Kadoury
+
 [% .papers %]
 {{O006}}
 {{O028}}
@@ -205,6 +213,8 @@ A short program overview in the [program at a glance](/dates.html), and you can 
 ## Wednesday July 8 - 8:30-15:00
 
 ### WED 8:30-9:30 UTC-4 - Oral Session #5 - Image Generation
+
+Session Chairs: Mattias Heinrich, Carole Sudre
 
 [% .papers %]
 {{O018}}
@@ -257,7 +267,9 @@ A short program overview in the [program at a glance](/dates.html), and you can 
 
 ---
 
-### WED 12:30-13:30 UTC-4 - Oral Session #6 - Attention Maps
+### WED 12:30-13:30 UTC-4 - Oral Session #6 - Attention
+
+Session Chairs: Pierre-Marc Jodoin, April Khademi
 
 [% .papers %]
 {{O042}}
