Add session chairs for keynotes

--- a/pages/scientific-program.template
+++ b/pages/scientific-program.template
@@ -64,6 +64,8 @@ Session Chairs: Bjoern Menze, Qi Dou
 
 ### MON 11:00-12:00 UTC-4 - Keynote #1 - Alan Evans
 
+Session Chairs: Maxime Descoteaux, Joseph Paul Cohen
+
 
 ### MON 12:00-12:30 UTC-4 - Break
 
@@ -161,11 +163,14 @@ Session Chairs: Kevin Zhou, Clarisa Sánchez
 
 ### TUE 11:00-12:00 UTC-4 - Keynote #2 - Nikos Paragios
 
+Session Chairs: Tal Arbel, Ismail Ben Ayed
 
 ### TUE 12:00-12:30 UTC-4 - Break
 
 
 ### TUE 12:30-13:30 UTC-4 - Keynote #3 - Daphne Koller
+
+Session Chairs: Christopher Pal, Joseph Paul Cohen
 
 ---
 
@@ -261,6 +266,8 @@ Session Chairs: Mattias Heinrich, Carole Sudre
 ---
 
 ### WED 11:00-12:00 UTC-4 - Keynote #4 - Elsa Angelini
+
+Session Chairs: Marleen de Bruijne, Hervé Lombaert
 
 
 ### WED 12:00-12:30 UTC-4 - Break
