--- a/website.yaml
+++ b/website.yaml
@@ -34,6 +34,9 @@ nav:
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
+  - title: "Awards"
+    path: "/awards.html"
+    icon: "award"
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
