--- a/pages/papers/paper.template
+++ b/pages/papers/paper.template
@@ -1,38 +1,42 @@
 ---
 title: "TITLE"
-page_class: "paper-page"
+page_class: "paper"
 ---
 
-{% from "_macros.html" import presentation %}
-{% from "_macros.html" import button %}
-{% from "_macros.html" import teaser %}
-{% from "_macros.html" import youtube %}
+{% from "_macros.html" import presentation, button, teaser, youtube %}
 
 # CONF_ID - TITLE
 
-
 ### AUTHORS
 
-<center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Show abstract</a>
-        - <a class="toggle_visibility" data-selector=".paper_qa" data-level="3">Show schedule</a>
-        - <a href="https://openreview.net/pdf?id=ORID">Paper</a>
-        - <a href="https://openreview.net/forum?id=ORID">Reviews</a>
-        {{ teaser('TEASER') }}
+<div class="details">
+    <a class="toggle_visibility" data-selector=".abstract" data-level="3">Show abstract</a>
+    -
+    <a class="toggle_visibility" data-selector=".schedule" data-level="3">Show schedule</a>
+    -
+    <a href="https://openreview.net/pdf?id=ORID">Paper</a>
+    -
+    <a href="https://openreview.net/forum?id=ORID">Reviews</a>
+    {{ teaser('TEASER') }}
 
-<span class="paper_abstract">
-        ABSTRACT
-        <span class="actions">
-  <br/>
-  <a class="toggle_visibility" data-level="2">Hide abstract</a></span>
-</span>
+    <p>
+        <span class="abstract">
+            ABSTRACT
+            <br>
+            <span class="actions"><a class="toggle_visibility" data-level="2">Hide abstract</a></span>
+        </span>
+    </p>
 
-<span class="paper_qa">
-        SCHEDULE
-        <br/>
-        <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
-</span>
+    <p>
+        <span class="schedule">
+            SCHEDULE
+            <br>
+            <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
+        </span>
+    </p>
 
-{{ button("Access paper channel", "https://chat.midl.io/channel/SMALLID") }}
+    {{ button("Access paper channel", "https://chat.midl.io/channel/SMALLID") }}
+</div>
 
 ---
 
