--- a/pages/papers/paper.template
+++ b/pages/papers/paper.template
@@ -9,34 +9,34 @@ page_class: "paper"
 
 ### AUTHORS
 
-<div class="details">
-    <a class="toggle_visibility" data-selector=".abstract" data-level="3">Show abstract</a>
-    -
-    <a class="toggle_visibility" data-selector=".schedule" data-level="3">Show schedule</a>
-    -
-    <a href="https://openreview.net/pdf?id=ORID">Paper</a>
-    -
-    <a href="https://openreview.net/forum?id=ORID">Reviews</a>
-    {{ teaser('TEASER') }}
+[% .details %]
+<a class="toggle_visibility" data-selector=".abstract" data-level="3">Show abstract</a>
+-
+<a class="toggle_visibility" data-selector=".schedule" data-level="3">Show schedule</a>
+-
+<a href="https://openreview.net/pdf?id=ORID">Paper</a>
+-
+<a href="https://openreview.net/forum?id=ORID">Reviews</a>
+{{ teaser('TEASER') }}
 
-    <p>
-        <span class="abstract">
-            ABSTRACT
-            <br>
-            <span class="actions"><a class="toggle_visibility" data-level="2">Hide abstract</a></span>
-        </span>
-    </p>
+<p>
+    <span class="abstract">
+        ABSTRACT
+        <br>
+        <span class="actions"><a class="toggle_visibility" data-level="2">Hide abstract</a></span>
+    </span>
+</p>
 
-    <p>
-        <span class="schedule">
-            SCHEDULE
-            <br>
-            <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
-        </span>
-    </p>
+<p>
+    <span class="schedule">
+        SCHEDULE
+        <br>
+        <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
+    </span>
+</p>
 
-    {{ button("Access paper channel", "https://chat.midl.io/channel/SMALLID") }}
-</div>
+{{ button("Access paper channel", "https://chat.midl.io/channel/SMALLID") }}
+[% / %]
 
 ---
 
