Add summary for search engines

--- a/website.yaml
+++ b/website.yaml
@@ -11,6 +11,7 @@ openreview: "MIDL.io/2020/Conference"
 youtube: "channel/UCd87UPUTt-oqTeGi8fQw-_w"
 github: "MIDL-Conference"
 
+summary: "The International Conference on Medical Imaging will be held from 6 to 9 July 2020"
 
 show_twitter_button: yes
 show_twitter_feed: yes
