--- a/website.yaml
+++ b/website.yaml
@@ -35,9 +35,9 @@ nav:
   - title: "Keynotes"
     path: "/keynotes.html"
     icon: "microphone"
-  # - title: "Awards"
-  #   path: "/awards.html"
-  #   icon: "award"
+  - title: "Awards"
+    path: "/awards.html"
+    icon: "award"
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
