Remove registration link etc

--- a/website.yaml
+++ b/website.yaml
@@ -44,9 +44,9 @@ nav:
   - title: "Challenges"
     path: "/challenges.html"
     icon: "trophy"
-  - title: "Registration"
-    path: "/registration.html"
-    icon: "ticket-alt"
+  # - title: "Registration"
+  #   path: "/registration.html"
+  #   icon: "ticket-alt"
   - title: "Aims and Scope"
     path: "/aims.html"
     icon: "lightbulb"
@@ -71,9 +71,9 @@ nav:
   - title: "Sponsors"
     path: "/sponsors.html"
     icon: "star"
-  - title: "Sponsorship"
-    path: "/sponsorship-packages.html"
-    icon: "donate"
+  # - title: "Sponsorship"
+  #  path: "/sponsorship-packages.html"
+  #  icon: "donate"
   # - title: "Covid-19 FAQ"
   #   path: "/covid-19.html"
   #   icon: "comment-medical"
